# sile

./: .gitignore  Cargo.toml
crates/sile/: Cargo.toml
crates/sile-backend/: Cargo.toml
crates/sile-backend-common/: Cargo.toml
crates/sile-backend-common/src/: lib.rs  llir_text.rs
crates/sile-backend-cpu/: Cargo.toml
crates/sile-backend-cpu/src/: codegen_c.rs  codegen_llir_c.rs  lib.rs
crates/sile-backend-cpu/src/scheduling/: annotate.rs  dependency.rs  mod.rs
crates/sile-backend-metal/: Cargo.toml
crates/sile-backend-metal/src/: codegen_llir_metal.rs  codegen_metal.rs  lib.rs
crates/sile-backend/src/: emit.rs  lib.rs  verify.rs
crates/sile-backend/src/cpu/: codegen.rs  codegen_llir_c.rs  mod.rs
crates/sile-backend/src/metal/: codegen.rs  codegen_llir_metal.rs  mod.rs
crates/sile-backend/src/passes/: emit.rs  legalize.rs  mod.rs  verify.rs
crates/sile-backend/src/passes/emit/: shared.rs
crates/sile-backend/tests/: compile.rs  pipeline.rs  verify.rs
crates/sile-compiler/: Cargo.toml
crates/sile-compiler/src/: lib.rs  lower_hir.rs  lower_lir.rs
crates/sile-compiler/tests/: executable_kernel.rs
crates/sile-core/: Cargo.toml
crates/sile-core/src/: device.rs  kernel.rs  lib.rs  stream.rs
crates/sile-core/tests/: device_selection.rs
crates/sile-hir/: Cargo.toml
crates/sile-hir/src/: kernel.rs  lib.rs  typeck.rs  types.rs
crates/sile-hir/tests/: hir_shape_model.rs
crates/sile-lir/: Cargo.toml
crates/sile-lir/src/: backend.rs  builder.rs  executable.rs  ir.rs  lib.rs  print.rs
crates/sile-lir/tests/: executable_kernel.rs  print.rs
crates/sile-llir/: Cargo.toml
crates/sile-llir/src/: ir.rs  lib.rs  print.rs
crates/sile-llir/tests/: print.rs
crates/sile-llvm-ir/: Cargo.toml
crates/sile-llvm-ir/src/: ir.rs  lib.rs  print.rs
crates/sile-llvm-ir/tests/: print.rs
crates/sile-macros/: Cargo.toml
crates/sile-macros/src/: lib.rs
crates/sile-mir/: Cargo.toml
crates/sile-tile-ir/: Cargo.toml
crates/sile/examples/: matmul.rs  mlp.rs  parallel_reduce.rs  softmax.rs  vec_add.rs
crates/sile/src/: compiler.rs  device.rs  error.rs  kernel.rs  kernel_launcher.rs  lib.rs  spec.rs  stream.rs  tensor.rs  tile.rs
crates/sile/src/backend/: cpu_c.rs  mod.rs
crates/sile/src/backend_ir/: ir.rs  lower.rs
crates/sile/src/codegen/: c.rs
crates/sile/src/hir/: kernel.rs  mod.rs  types.rs
crates/sile/src/lir/: builder.rs  ir.rs  lower.rs  mod.rs
crates/sile/src/passes/: canonicalize.rs
crates/sile/src/schedule/: mod.rs
crates/sile/src/scheduling/: annotate.rs  dependency.rs
crates/sile/src/ssa/: ir.rs  lower.rs  mod.rs
crates/sile/src/typeck/: error.rs  mod.rs
crates/sile/tests/: backend_matmul.rs  backend_metal.rs  backend_parallel_reduce.rs  backend_softmax.rs  backend_vec_add.rs  c_codegen.rs  device_selection.rs  hir_shape_model.rs  kernel_frontend_softmax.rs  kernel_frontend_vec_add.rs  kernel_macro_smoke.rs  kernel_spec_validation.rs  llir_c_codegen.rs  llir_cpu_runtime.rs  llir_lowering.rs  llir_metal_codegen.rs  llvm_ir_c_codegen.rs  llvm_ir_cpu_runtime.rs  llvm_ir_lowering.rs  llvm_ir_metal_codegen.rs  metal_codegen.rs  public_api_smoke.rs  ssa_softmax.rs  ssa_vec_add.rs  tile_ir_print.rs  typeck_softmax.rs  typeck_vec_add.rs  vec_add_e2e.rs
scripts/: llir_metrics.sh
(+120 files in other folders)
