[workspace]
members = ["crates/sile", "crates/sile-macros", "crates/sile-core", "crates/sile-hir", "crates/sile-mir", "crates/sile-lir", "crates/sile-llir", "crates/sile-backend-cpu", "crates/sile-backend-metal"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
darling = "0.23.0"
libloading = "0.9.0"
rand = "0.10.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
tempfile = "3"
thiserror = "2"
