[package]
name = "sile-backend-cpu"
version.workspace = true
edition.workspace = true

[dependencies]
sile-core = { path = "../sile-core" }
sile-hir = { path = "../sile-hir" }
sile-lir = { path = "../sile-lir" }
sile-llir = { path = "../sile-llir" }
libloading.workspace = true
tempfile.workspace = true
