[package]
name = "sile-backend-cpu"
version.workspace = true
edition.workspace = true

[dependencies]
sile-backend-common = { path = "../sile-backend-common" }
sile-core = { path = "../sile-core" }
sile-hir = { path = "../sile-hir" }
sile-llir = { path = "../sile-llir" }
libloading.workspace = true
tempfile.workspace = true
