[package]
name = "sile-backend"
version.workspace = true
edition.workspace = true

[dependencies]
sile-core = { path = "../sile-core" }
sile-hir = { path = "../sile-hir" }
sile-llvm-ir = { path = "../sile-llvm-ir" }
libloading.workspace = true
tempfile.workspace = true
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"
