[package]
name = "sile"
version.workspace = true
edition.workspace = true

[dependencies]
sile-core = { path = "../sile-core" }
sile-hir = { path = "../sile-hir" }
sile-mir = { path = "../sile-mir" }
sile-llir = { path = "../sile-llir" }
sile-backend-cpu = { path = "../sile-backend-cpu" }
sile-backend-metal = { path = "../sile-backend-metal" }
sile-macros = { path = "../sile-macros" }
rand.workspace = true
thiserror.workspace = true
