[package]
name = "sile"
version.workspace = true
edition.workspace = true

[dependencies]
sile-core = { path = "../sile-core" }
sile-hir = { path = "../sile-hir" }
sile-tile-ir = { path = "../sile-tile-ir" }
sile-llvm-ir = { path = "../sile-llvm-ir" }
sile-backend = { path = "../sile-backend" }
sile-macros = { path = "../sile-macros" }
rand.workspace = true
thiserror.workspace = true
